# perks-database-update

./: .gitignore  README.md  airtable_utils.py  funding_updater.py  main.py  perks_active.txt  perks_updater.py  requirements.txt  scrape_analyze.py  web_utils.py
.cursor/rules/: code_examples.mdc
client/: README.md  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/perks/: page.tsx
client/app/pitchdecks/: page.tsx
client/app/pitchdecks/[id]/: page.tsx
client/components/: navigation.tsx
client/lib/: api.ts  utils.ts
llm_extractors/: gpt_extractor.py  perplexity_extractor.py
perks_scrapper/: .gitignore  README.md  pyproject.toml
perks_scrapper/app/: main.py  models.py  prompts.py  services.py
results/: perks_active.txt  perks_inactive.txt  perks_updated.txt  perks_wo_link.txt  scraped_info.json  scraped_info.txt
results_funding_update/: active.txt  inactive.txt  scraped_info.json  updated.txt  wo_link.txt
results_perks_update/: active.txt  inactive.txt  scraped_info.json  wo_link.txt
src/: airtable_utils.py  gpt_extractor.py  perplexity_extractor.py  utils.py  web_utils.py
