[tool.poetry]
name = "perks_scrapper"
version = "0.1.0"
description = "AI agent to update startup perk descriptions."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
openai = "^1.78.1"
firecrawl-py = "^2.5.4"
exa-py = "^1.13.0"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
requests = "^2.32.3" # For Airtable, though a dedicated library might be better later

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 